--- a/public/style.css
+++ b/public/style.css
@@ -1,21 +1,29 @@
 html {
-    background:url('./slide1.jpg');
-    background-size:cover;
-    height:100vh;
+  background: url('./slide1.jpg');
+  background-size: cover;
+  height: 100vh;
 }
 
 /*.header .intro {padding-top:50px;text-align:center;color:#FFF; text-align: center;}*/
 
 .header .intro button {
   border: none;
-    color: white;
-    font-size: 20px;
-    padding: 15px 10px;
-    background-color: rgba(1,1,1,0.8);
-    font-family: 'Spectral SC', serif;
-    cursor: pointer;
-
+  color: white;
+  font-size: 20px;
+  padding: 15px 10px;
+  background-color: rgba(1, 1, 1, 0.8);
+  font-family: 'Spectral SC', serif;
+  cursor: pointer;
 }
-.header .intro text {
 
+.header .intro text {}
+
+.dropdown {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
