--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,14 @@
-html {
-<<<<<<< HEAD
+/*html {
   background: url('./slide1.jpg');
   background-size: cover;
   height: 100vh;
-=======
-    background:url('./slide1.jpg');
-    background-size:cover;
-    height:100vh;
->>>>>>> 91a34e4d0a123ed60aef038ddb3ae5151c85ea03
-}
+}*/
 
 /*.header .intro {padding-top:50px;text-align:center;color:#FFF; text-align: center;}*/
 
 .header .intro button {
+  
   border: none;
-<<<<<<< HEAD
   color: white;
   font-size: 20px;
   padding: 15px 10px;
@@ -33,16 +27,4 @@ html {
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-=======
-    color: white;
-    font-size: 20px;
-    padding: 15px 10px;
-    background-color: rgba(1,1,1,0.8);
-    font-family: 'Spectral SC', serif;
-    cursor: pointer;
-
-}
-.header .intro text {
-
->>>>>>> 91a34e4d0a123ed60aef038ddb3ae5151c85ea03
 }
