--- a/public/style.css
+++ b/public/style.css
@@ -1,21 +1,46 @@
 html {
-    background:url('./slide1.jpg');
-    background-size:cover;
-    height:100vh;
+  display: flex;
+  justify-content: center;
+  background: url('https://raw.githubusercontent.com/facg3/chemics/master/slide1.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
-
-/*.header .intro {padding-top:50px;text-align:center;color:#FFF; text-align: center;}*/
 
 .header .intro button {
   border: none;
-    color: white;
-    font-size: 20px;
-    padding: 15px 10px;
-    background-color: rgba(1,1,1,0.8);
-    font-family: 'Spectral SC', serif;
-    cursor: pointer;
-
+  color: white;
+  font-size: 20px;
+  padding: 15px 10px;
+  background-color: rgba(1, 1, 1, 0.8);
+  font-family: 'Spectral SC', serif;
+  cursor: pointer;
 }
-.header .intro text {
 
+.header {
+  padding-top: 80px;
+}
+
+form input, button {
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+form a {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  margin: 15px;
+  color: #FFFFFF;
+}
+
+form div {
+padding: 10px;
+  background-color: rgba(54,43,33,0.4);
+  visibility: hidden;
 }
