--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,8 @@ form a {
 }
 
 form div {
-padding: 10px;
-  background-color: rgba(54,43,33,0.4);
+  padding: 10px;
+  margin-top: -8px;
+  background-color: rgba(54, 43, 33, 0.4);
   visibility: hidden;
 }
