--- a/public/style.css
+++ b/public/style.css
@@ -7,23 +7,14 @@ html {
   height: 100vh;
 }
 
-.header .intro button {
-  border: none;
-  color: white;
-  font-size: 20px;
-  padding: 15px 10px;
-  background-color: rgba(1, 1, 1, 0.8);
-  font-family: 'Spectral SC', serif;
-  cursor: pointer;
-}
-
 .header {
   padding-top: 80px;
 }
 
-form input, button {
+form input {
   padding: 12px 20px;
   margin: 8px 0;
+  width: 100%;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -40,6 +31,7 @@ form a {
 }
 
 form div {
+  width: 350px;
   padding: 10px;
   margin-top: -8px;
   background-color: rgba(54, 43, 33, 0.4);
